# ltto_edmd

./: .gitignore  pyproject.toml
scripts/: DMD.py  ground_truth.py
src/controllers/: data_conotroller.py  test_controller.py
src/dynamics/: approx_dynamics.py  config.py  discrete_dynamics.py  dynamics_reduced.py
src/edmd/: make_GA.py  make_dataset.py  observables.py
venvedmd/: pyvenv.cfg
venvedmd/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
