# pyproject.toml
[tool.poetry]
name = "ltto_edmd"
version = "0.1.0"
description = "Low thrust trajectory optimization with EDMD"
authors = ["TAEUK KANG <kuty1210@naver.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
scipy = "^1.11"
matplotlib = "^3.8"
pandas = "^2.1"
tqdm = "^4.66"
openpyxl = "^3.1.5"
cupy-cuda12x = "13.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"